support for modelSupport in findRerankingProviders
CollectionDefinition fluent interface: set_lexical and set_rerank accept also just 'enabled'
find_and_rerank scores' type enlarged to: `float|int|null`
maintenance: improve integration test coverage for:
    - collection columns in tables: indexing, collection-specific DML commands ($push, $pullAll and so on)
    - collection lexical/BM25-related DML operations (filtering, sorting based on $lexical)
maintenance: subsumed the specific testing opt-in env. var 'ASTRAPY_TEST_MAP2TUPLES=y' into the catch-all 'cutting-edge main' `ASTRAPY_TEST_LATEST_MAIN=y`
maintenance: simplified SerdesOptions management in unit testing; some rationalization/refactoring of pre- and post-processing logic for tables in unit tests
maintenance: switched to uv (from poetry)
maintenance: promoted findAndRerank testing to the 'regular' IT (adjusted readme and env templates accordingly)
maintenance: pin h11 to 0.16.0 or higher (after a vulnerability report)
maintenance: switch to latest HCD for non-Astra CI github action
maintenance: introduce CQL-driven testing for low/no-support table columns. `LOCAL_DATA_API_APPLICATION_TOKEN` local test auth not supported anymore.

v 2.0.1
=======
bugfix: receiving `'$vector': null` caused response parsing to break

v 2.0.0
=======
Collections admit `DataAPIMap` in writing and support `DataAPIDate` as well (the latter coming with the same timezone caveats as `datetime.date`)
(plus all of the v2 pre-releases below)


v 2.0.0rc2
==========
Cursors (class hierarchy revised to accommodate `find_and_rerank`, plus other changes):
    - renamed the 'FindCursorState' enum to `CursorState`
    - renamed the abstract ur-class 'FindCursor' => `AbstractCursor`
    - `clone` method does not strip the mapping anymore, rather retains it
    - removed the `alive` sugar property (use `cursors.state != CursorState.CLOSED`)
Support for reranker header-based authentication: