@@ -571,3 +571,55 @@ class TestCollectionDDLAsync:
             assert col1 == col2
         finally:
             await async_database.drop_collection(TEST_FARR_COLLECTION_NAME)
+
+    @pytest.mark.describe("test of collection lexical detailed config, async")
+    async def test_collection_lexical_detailedconfig_async(
+        self,
+        async_database: AsyncDatabase,
+    ) -> None:
+        TEST_LEXICAL_DETAILEDCONFIG_COLLECTION_NAME = "test_lexical_detcfg_coll"
+        try:
+            await async_database.create_collection(
+                TEST_LEXICAL_DETAILEDCONFIG_COLLECTION_NAME,
+                definition=(
+                    CollectionDefinition.builder()
+                    .set_lexical(
+                        {
+                            "tokenizer": {"name": "standard", "args": {}},
+                            "filters": [
+                                {"name": "lowercase"},
+                                {"name": "stop"},
+                                {"name": "porterstem"},
+                                {"name": "asciifolding"},
+                            ],
+                            "charFilters": [],
+                        }
+                    )
+                    .build()
+                ),
+            )
+
+            coll_ldc_definition = CollectionDefinition(
+                lexical=CollectionLexicalOptions(
+                    analyzer={
+                        "tokenizer": {"name": "standard", "args": {}},
+                        "filters": [
+                            {"name": "lowercase"},
+                            {"name": "stop"},
+                            {"name": "porterstem"},
+                            {"name": "asciifolding"},
+                        ],
+                        "charFilters": [],
+                    },
+                    enabled=True,
+                ),
+            )
+            await async_database.create_collection(
+                TEST_LEXICAL_DETAILEDCONFIG_COLLECTION_NAME,
+                definition=coll_ldc_definition,
+            )
+
+        finally:
+            await async_database.drop_collection(
+                TEST_LEXICAL_DETAILEDCONFIG_COLLECTION_NAME,
+            )
