@@ -567,3 +567,53 @@ class TestCollectionDDLSync:
             assert col1 == col2
         finally:
             sync_database.drop_collection(TEST_FARR_COLLECTION_NAME)
+
+    @pytest.mark.describe("test of collection lexical detailed config, sync")
+    def test_collection_lexical_detailedconfig_sync(
+        self,
+        sync_database: Database,
+    ) -> None:
+        TEST_LEXICAL_DETAILEDCONFIG_COLLECTION_NAME = "test_lexical_detcfg_coll"
+        try:
+            sync_database.create_collection(
+                TEST_LEXICAL_DETAILEDCONFIG_COLLECTION_NAME,
+                definition=(
+                    CollectionDefinition.builder()
+                    .set_lexical(
+                        {
+                            "tokenizer": {"name": "standard", "args": {}},
+                            "filters": [
+                                {"name": "lowercase"},
+                                {"name": "stop"},
+                                {"name": "porterstem"},
+                                {"name": "asciifolding"},
+                            ],
+                            "charFilters": [],
+                        }
+                    )
+                    .build()
+                ),
+            )
+
+            coll_ldc_definition = CollectionDefinition(
+                lexical=CollectionLexicalOptions(
+                    analyzer={
+                        "tokenizer": {"name": "standard", "args": {}},
+                        "filters": [
+                            {"name": "lowercase"},
+                            {"name": "stop"},
+                            {"name": "porterstem"},
+                            {"name": "asciifolding"},
+                        ],
+                        "charFilters": [],
+                    },
+                    enabled=True,
+                ),
+            )
+            sync_database.create_collection(
+                TEST_LEXICAL_DETAILEDCONFIG_COLLECTION_NAME,
+                definition=coll_ldc_definition,
+            )
+
+        finally:
+            sync_database.drop_collection(TEST_LEXICAL_DETAILEDCONFIG_COLLECTION_NAME)
